--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,13 +1,16 @@
 Package: ggeocode
 Type: Package
-Title: What the Package Does (Title Case)
-Version: 0.1.0
-Author: Who wrote it
-Maintainer: The package maintainer <alan@adelieresources.com>
+Title: Access Various Online Geocoding Services
+Version: 0.0.0.9000
+Authors@R: person("Alan", "Jackson", email = "alan@adelieresources.com",
+                  role = c("aut", "cre"))
 Description: More about what it does (maybe more than one line)
     Use four spaces when indenting paragraphs within the Description.
-License: What license is it under?
+License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
 URL: https://github.com/alankjackson/ggeocode
 BugReports: https://github.com/alankjackson/ggeocode/issues
+Imports:
+    dplyr (>= 0.8.3),
+    opencage
