--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,6 +14,10 @@ BugReports: https://github.com/alankjackson/ggeocode/issues
 Imports:
     dplyr (>= 0.8.3),
     fs (>= 1.3.1),
+    readr,
+    stringr,
+    tibble,
+    magrittr,
     opencage
 Suggests: 
     testthat
