--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,10 +15,10 @@ Imports:
     dplyr (>= 0.8.3),
     fs (>= 1.3.1),
     readr,
-    stringr,
-    tibble,
+    stringr (>=1.4.0),
+    tibble (>=2.1.3),
     magrittr,
-    opencage
+    opencage (>=0.1.4)
 Suggests: 
     testthat
 RoxygenNote: 7.0.2
