--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -18,6 +18,7 @@ Imports:
     stringr (>= 1.4.0),
     tibble (>= 2.1.3),
     magrittr,
+    httr,
     opencage (>= 0.1.4)
 Suggests: 
     testthat
