--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -19,6 +19,8 @@ Imports:
     tibble (>= 2.1.3),
     magrittr,
     httr,
+    ggmap (>= 3.0.0),
+    lubridate (>= 1.7.4),
     opencage (>= 0.1.4)
 Suggests: 
     testthat
